--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        margin-top: 3rem;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -52,7 +53,7 @@
  <main class="main">
  <!-- input component -->
  <div class="input-container">
-  <button><span class="circle"></span></button>
+  <button style="cursor:initial;"><span class="circle"></span></button>
   <form class="form">
   <input type="text" value placeholder="create a new todo..." id="input" autofocus>
   </form>
@@ -90,7 +91,7 @@
    </div>
    
  </main>
- <footer>
+ <footer class="footer-parent">
   <div class="footer">
     Drag and drop to reorder list
   </div>
