--- a/index.html
+++ b/index.html
@@ -101,5 +101,6 @@
  <div class="attribution">
   Challenge by<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">OLADEJO ENIOLA</a>.
   <script src="./index1.js"></script>
+  <script src="DragDropTouch.js"></script>
 </body>
 </html>
