--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
  <div class="attribution">
   Challenge by<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">OLADEJO ENIOLA</a>.
   <script src="./index1.js"></script>
-  <script src="DragDropTouch.js"></script>
+  <script src="libs/mobile-drag-drop/release/index.min.js"></script>
+
+<!--optional import of scroll behaviour-->
+<script src="libs/mobile-drag-drop/release/scroll-behaviour.min.js"></script>
+
+<script>
+    // options are optional ;)
+    MobileDragDrop.polyfill({
+        // use this to make use of the scroll behaviour
+        dragImageTranslateOverride: MobileDragDrop.scrollBehaviourDragImageTranslateOverride
+    });
+</script>
 </body>
 </html>
